# hs-gsr

./: LICENSE  README.md  gsr.cabal  hk-gitstatus.cabal
app/: Main.hs
src/: Lib.hs
