name:                gsr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yukimemi/gsr#readme
license:             BSD3
license-file:        LICENSE
author:              yukimemi
maintainer:          yukimemi@gmail.com
copyright:           (c) 2017, yukimemi
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable gsr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gsr
                     , optparse-applicative
                     , process
                     , safe-exceptions
                     , directory
                     , filepath
  default-language:    Haskell2010

test-suite gsr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gsr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yukimemi/gsr
